Fix layout spacing issue

--- a/axelor-front/src/layout/layout.module.scss
+++ b/axelor-front/src/layout/layout.module.scss
@@ -10,7 +10,7 @@
 }
 
 .container.hasSidebar {
-  column-gap: 1rem;
+  column-gap: 0.5rem;
 }
 
 .content {
